@@ -1,3 +1,15 @@
+2012-01-05  Dov Grobgeld  <dov.grobgeld@gmail.com>
+
+        * glib-json-rpc-server.h, glib-json-rpc-server.c: Added error code for server response.
+
+        * glib-json-rpc-json.c, glib-json-rpc-json.h : Added several new utility routines.
+
+        * glib-json-rpc-server.c: Introduced conditional variable for proper thread synchronization.
+
+2012-01-04  Dov Grobgeld  <dov.grobgeld@gmail.com>
+
+        * glib-json-rpc-client.c : Fixed type in the HTTP header.
+
 2011-12-30  Dov Grobgeld  <dov.grobgeld@gmail.com>
 
         * glib-jsonrpc-server.c, glib-jsonrpc-client.c: Moved the mutex into a new client variable.
